Fixed gaps in container 4

--- a/styles/home-styles/_home-container-4.scss
+++ b/styles/home-styles/_home-container-4.scss
@@ -48,7 +48,7 @@
 }
 
 .row-2 {
-    gap: 160px;
+    gap: 130px;
 }
 
 .row-3 {
@@ -60,7 +60,7 @@
 }
 
 .row-4 {
-    gap: 170px;
+    gap: 130px;
 }
 
 .text-bold {
